[gd_scene load_steps=25 format=2]

[ext_resource path="res://addons/anima/visual-editor/shared/AnimaButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/anima/visual-editor/icons/Time.svg" type="Texture" id=2]
[ext_resource path="res://addons/anima/visual-editor/editor/AnimaAnimationData.gd" type="Script" id=3]
[ext_resource path="res://addons/anima/visual-editor/icons/Add.svg" type="Texture" id=4]
[ext_resource path="res://addons/anima/visual-editor/property/AnimaPropertyFromTo.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/anima/visual-editor/shared/AnimaPreviewButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/anima/visual-editor/icons/Remove.svg" type="Texture" id=7]
[ext_resource path="res://addons/anima/visual-editor/shared/AnimaColorRect.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/anima/visual-editor/shared/AnimaToggleButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/anima/visual-editor/windows/AnimaConfirmationDialog.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/anima/visual-editor/icons/Reload.svg" type="Texture" id=11]
[ext_resource path="res://addons/anima/visual-editor/icons/Node.svg" type="Texture" id=12]
[ext_resource path="res://addons/anima/visual-editor/icons/Grid.svg" type="Texture" id=13]
[ext_resource path="res://addons/anima/visual-editor/shared/AnimaNumberEdit.tscn" type="PackedScene" id=14]
[ext_resource path="res://addons/anima/visual-editor/icons/Group.svg" type="Texture" id=15]
[ext_resource path="res://addons/anima/visual-editor/icons/Tools.svg" type="Texture" id=16]
[ext_resource path="res://addons/anima/visual-editor/shared/AnimaMenuButton.tscn" type="PackedScene" id=17]
[ext_resource path="res://addons/anima/visual-editor/icons/Close.svg" type="Texture" id=18]

[sub_resource type="StyleBoxFlat" id=21]
content_margin_left = 48.0
content_margin_right = 24.0
content_margin_top = 12.0
content_margin_bottom = 12.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=22]
content_margin_left = 48.0
content_margin_right = 24.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="ButtonGroup" id=17]

[sub_resource type="StyleBoxFlat" id=23]
content_margin_left = 48.0
content_margin_right = 24.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=24]
content_margin_left = 48.0
content_margin_right = 24.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.0980392, 0.113725, 0.156863, 1 )

[node name="AnimaAnimationData" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 54 )
rect_pivot_offset = Vector2( 512, 32 )
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Background" type="ColorRect" parent="Control"]
margin_right = 600.0
margin_bottom = 1024.0
mouse_filter = 1
color = Color( 0.113725, 0.207843, 0.341176, 1 )

[node name="Title" parent="." instance=ExtResource( 9 )]
anchor_right = 0.0
margin_right = 600.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 300, 24.5 )
custom_styles/normal = SubResource( 21 )
node_to_toggle = NodePath("../MarginContainer")

[node name="ActionsContainer" type="HBoxContainer" parent="Title"]
margin_right = 600.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12
alignment = 2

[node name="TitleActionsBg" parent="Title/ActionsContainer" instance=ExtResource( 8 )]
margin_left = 436.0
margin_right = 600.0
margin_bottom = 49.0
rect_min_size = Vector2( 164, 49 )
color = Color( 0.329412, 0.329412, 0.0313726, 1 )
style = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Title/ActionsContainer/TitleActionsBg"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -180.0
margin_bottom = -27.0
rect_min_size = Vector2( 0, 49 )
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Preview" parent="Title/ActionsContainer/TitleActionsBg/HBoxContainer" instance=ExtResource( 6 )]
margin_bottom = 49.0
rect_pivot_offset = Vector2( 24, 24.5 )

[node name="Label" type="Label" parent="Title/ActionsContainer/TitleActionsBg/HBoxContainer"]
margin_left = 52.0
margin_top = 17.0
margin_right = 60.0
margin_bottom = 31.0
rect_min_size = Vector2( 8, 0 )

[node name="Time" parent="Title/ActionsContainer/TitleActionsBg/HBoxContainer" instance=ExtResource( 1 )]
visible = false
margin_left = 76.0
margin_right = 124.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 24, 24.5 )
hint_tooltip = "Show animation duration and delay"
toggle_mode = true
icon = ExtResource( 2 )
icon_align = 1
expand_icon = true
transparent = true

[node name="AnimateAs" parent="Title/ActionsContainer/TitleActionsBg/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 64.0
margin_right = 112.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 24, 24.5 )
hint_tooltip = "Select how to animate the group of nodes"
toggle_mode = true
icon = ExtResource( 12 )
icon_align = 1
expand_icon = true
transparent = true

[node name="AddAnimation" parent="Title/ActionsContainer/TitleActionsBg/HBoxContainer" instance=ExtResource( 1 )]
visible = false
margin_left = 180.0
margin_right = 228.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 24, 24.5 )
icon = ExtResource( 4 )
icon_align = 1
expand_icon = true
transparent = true

[node name="Remove" parent="Title/ActionsContainer/TitleActionsBg/HBoxContainer" instance=ExtResource( 1 )]
visible = false
margin_left = 232.0
margin_right = 280.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 24, 24.5 )
hint_tooltip = "Delete the current animation"
icon = ExtResource( 7 )
icon_align = 1
expand_icon = true
style = 2
transparent = true

[node name="OptionButton" parent="Title/ActionsContainer/TitleActionsBg/HBoxContainer" instance=ExtResource( 17 )]
margin_left = 116.0
margin_right = 164.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 32, 24.5 )
icon = ExtResource( 16 )
icon_align = 1
expand_icon = true
style = 3
transparent = true
show_panel_on = 2
_items = [ {
"icon": "res://addons/anima/visual-editor/icons/Time.svg",
"label": "View/Set default frame duration"
}, "__divider__", {
"icon": "res://addons/anima/visual-editor/icons/Remove.svg",
"label": "Remove animation"
} ]
update_on_selected = false

[node name="TimeContent" parent="." instance=ExtResource( 8 )]
visible = false
margin_top = 49.0
margin_right = 600.0
margin_bottom = 49.0
rect_min_size = Vector2( 600, 102 )

[node name="MarginContainer" type="MarginContainer" parent="TimeContent"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 24
custom_constants/margin_top = 12
custom_constants/margin_left = 24
custom_constants/margin_bottom = 12

[node name="TimeContentWrapper" type="HBoxContainer" parent="TimeContent/MarginContainer"]
margin_left = 24.0
margin_top = 12.0
margin_right = 576.0
margin_bottom = 90.0
custom_constants/separation = 12

[node name="TimeContentDetails" type="GridContainer" parent="TimeContent/MarginContainer/TimeContentWrapper"]
margin_right = 492.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( 500, 55 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 12
custom_constants/hseparation = 12
columns = 2
__meta__ = {
"__initial_opacity": 1.0,
"__visibility_strategy": 0,
"_visibility_strategy_reverted": true
}

[node name="Label2" type="Label" parent="TimeContent/MarginContainer/TimeContentWrapper/TimeContentDetails"]
margin_top = 9.0
margin_right = 78.0
margin_bottom = 23.0
text = "Duration (s):"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Duration" parent="TimeContent/MarginContainer/TimeContentWrapper/TimeContentDetails" instance=ExtResource( 5 )]
margin_left = 90.0
margin_right = 492.0
margin_bottom = 33.0
rect_min_size = Vector2( 0, 33 )
rect_pivot_offset = Vector2( 410, 24.5 )
label = "default duration"
type = 3
show_relative_selector = false

[node name="Label3" type="Label" parent="TimeContent/MarginContainer/TimeContentWrapper/TimeContentDetails"]
margin_top = 54.0
margin_right = 78.0
margin_bottom = 68.0
text = "Delay (s):"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delay" parent="TimeContent/MarginContainer/TimeContentWrapper/TimeContentDetails" instance=ExtResource( 5 )]
margin_left = 90.0
margin_top = 45.0
margin_right = 492.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 33 )
rect_pivot_offset = Vector2( 410, 24.5 )
label = "none"
type = 3
show_relative_selector = false

[node name="CloseTimeContent" parent="TimeContent/MarginContainer/TimeContentWrapper" instance=ExtResource( 1 )]
margin_left = 504.0
margin_top = 15.0
margin_right = 552.0
margin_bottom = 63.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource( 18 )
icon_align = 1
expand_icon = true
style = 3
transparent = true

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 49.0
margin_right = 600.0
margin_bottom = 181.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 588.0
margin_bottom = 108.0
custom_constants/separation = 24

[node name="NodeOrGroup" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
margin_right = 1000.0
margin_bottom = 429.0
rect_min_size = Vector2( 0, 32 )
rect_pivot_offset = Vector2( 500, 48.5 )

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/NodeOrGroup"]
margin_right = 1000.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 500, 14 )
columns = 3

[node name="AsNode" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridContainer" instance=ExtResource( 1 )]
margin_right = 328.0
margin_bottom = 49.0
rect_min_size = Vector2( 83, 49 )
rect_pivot_offset = Vector2( 164, 24.5 )
hint_tooltip = "Animates the single node only"
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 22 )
toggle_mode = true
group = SubResource( 17 )
text = "Node"
icon = ExtResource( 12 )

[node name="AsGroup" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridContainer" instance=ExtResource( 1 )]
margin_left = 336.0
margin_right = 664.0
margin_bottom = 49.0
rect_min_size = Vector2( 83, 49 )
rect_pivot_offset = Vector2( 164, 24.5 )
hint_tooltip = "Animates the direct children as group of nodes"
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 23 )
toggle_mode = true
group = SubResource( 17 )
text = "Group"
icon = ExtResource( 15 )

[node name="AsGrid" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridContainer" instance=ExtResource( 1 )]
margin_left = 672.0
margin_right = 1000.0
margin_bottom = 49.0
rect_min_size = Vector2( 83, 49 )
rect_pivot_offset = Vector2( 164, 24.5 )
hint_tooltip = "Animates the direct children as grid of nodes"
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 24 )
toggle_mode = true
group = SubResource( 17 )
text = "Grid"
icon = ExtResource( 13 )

[node name="GroupData" type="VBoxContainer" parent="MarginContainer/VBoxContainer/NodeOrGroup"]
visible = false
margin_top = 57.0
margin_right = 1000.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 48 )
rect_pivot_offset = Vector2( 0, 24 )
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/NodeOrGroup/GroupData"]
margin_right = 1000.0
margin_bottom = 143.0
custom_constants/margin_right = 24
custom_constants/margin_top = 12
custom_constants/margin_left = 24
custom_constants/margin_bottom = 12

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/NodeOrGroup/GroupData/MarginContainer"]
margin_left = 24.0
margin_top = 12.0
margin_right = 976.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="LabelItemsDelay" type="Label" parent="MarginContainer/VBoxContainer/NodeOrGroup/GroupData/MarginContainer/GridContainer"]
margin_top = 4.0
margin_right = 171.0
margin_bottom = 29.0
text = "Items delay (s):"

[node name="ItemsDelay" parent="MarginContainer/VBoxContainer/NodeOrGroup/GroupData/MarginContainer/GridContainer" instance=ExtResource( 14 )]
margin_left = 179.0
margin_right = 952.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "0.01"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/NodeOrGroup/GroupData/MarginContainer/GridContainer"]
margin_top = 47.0
margin_right = 171.0
margin_bottom = 72.0
text = "Animation type:"

[node name="AnimationGroupType" type="OptionButton" parent="MarginContainer/VBoxContainer/NodeOrGroup/GroupData/MarginContainer/GridContainer"]
margin_left = 179.0
margin_top = 41.0
margin_right = 952.0
margin_bottom = 78.0
text = "From Top"
items = [ "From Top", null, false, 0, null, "From Bottom", null, false, 1, null, "From Center", null, false, 2, null, "Odds Only", null, false, 3, null, "Even Only", null, false, 4, null, "Random", null, false, 5, null, "Together", null, false, 6, null, "From Index", null, false, 7, null ]
selected = 0

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/NodeOrGroup/GroupData/MarginContainer/GridContainer"]
margin_top = 90.0
margin_right = 171.0
margin_bottom = 115.0
text = "Start point:"

[node name="StartIndex" parent="MarginContainer/VBoxContainer/NodeOrGroup/GroupData/MarginContainer/GridContainer" instance=ExtResource( 14 )]
margin_left = 179.0
margin_top = 86.0
margin_right = 952.0
margin_bottom = 119.0
text = "0"
type = 0
min_value = 0.0

[node name="GridData" type="VBoxContainer" parent="MarginContainer/VBoxContainer/NodeOrGroup"]
visible = false
margin_top = 208.0
margin_right = 1000.0
margin_bottom = 429.0
rect_pivot_offset = Vector2( 0, 24 )
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData"]
margin_right = 1000.0
margin_bottom = 221.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 12
custom_constants/hseparation = 12
columns = 2

[node name="SizeLabel" type="Label" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer"]
margin_top = 4.0
margin_right = 185.0
margin_bottom = 29.0
text = "Size:"

[node name="Size" type="HBoxContainer" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer"]
margin_left = 197.0
margin_right = 1000.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( -581, 118 )
size_flags_horizontal = 3

[node name="x" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer/Size" instance=ExtResource( 14 )]
margin_right = 144.0
margin_bottom = 33.0
caret_blink = true
caret_blink_speed = 0.5
type = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer/Size"]
margin_left = 152.0
margin_top = 4.0
margin_right = 164.0
margin_bottom = 29.0
text = "x"

[node name="y" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer/Size" instance=ExtResource( 14 )]
margin_left = 172.0
margin_right = 316.0
margin_bottom = 33.0
caret_blink = true
caret_blink_speed = 0.5
type = 2

[node name="Button" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer/Size" instance=ExtResource( 1 )]
margin_left = 324.0
margin_right = 388.0
margin_bottom = 33.0
hint_tooltip = "Get grid size"
icon = ExtResource( 11 )
icon_align = 1

[node name="LabelItemsDelay" type="Label" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer"]
margin_top = 49.0
margin_right = 185.0
margin_bottom = 74.0
text = "Items delay (s):"

[node name="ItemsDelay" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer" instance=ExtResource( 14 )]
margin_left = 197.0
margin_top = 45.0
margin_right = 1000.0
margin_bottom = 78.0
text = "0.01"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer"]
margin_top = 96.0
margin_right = 185.0
margin_bottom = 121.0
text = "Animation type:"

[node name="AnimationGridType" type="OptionButton" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer"]
margin_left = 197.0
margin_top = 90.0
margin_right = 1000.0
margin_bottom = 127.0
text = "Together"
items = [ "Together", null, false, 0, null, "Sequence Top Left", null, false, 1, null, "Sequence Bottom Right", null, false, 2, null, "Columns Odd", null, false, 3, null, "Columns Even", null, false, 4, null, "Rows Odd", null, false, 5, null, "Rows Even", null, false, 6, null, "Odd Items", null, false, 7, null, "Even Items", null, false, 8, null, "From Center", null, false, 9, null, "From Point", null, false, 10, null, "Random", null, false, 11, null ]
selected = 0

[node name="StartPoint" type="Label" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer"]
margin_top = 143.0
margin_right = 185.0
margin_bottom = 168.0
text = "Start Point:"

[node name="Vector2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer"]
margin_left = 197.0
margin_top = 139.0
margin_right = 1000.0
margin_bottom = 172.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="X" type="HBoxContainer" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer/Vector2"]
margin_right = 397.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer/Vector2/X"]
margin_right = 32.0
margin_bottom = 33.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 20 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer/Vector2/X/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.701961, 0.564706, 0.537255, 1 )
text = "x"
align = 1
valign = 1

[node name="pointX" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer/Vector2/X" instance=ExtResource( 14 )]
margin_left = 32.0
margin_right = 176.0
margin_bottom = 33.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Y" type="HBoxContainer" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer/Vector2"]
margin_left = 405.0
margin_right = 803.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer/Vector2/Y"]
margin_right = 32.0
margin_bottom = 33.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 20 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer/Vector2/Y/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.364706, 0.580392, 0.458824, 1 )
text = "y"
align = 1
valign = 1

[node name="pointY" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer/Vector2/Y" instance=ExtResource( 14 )]
margin_left = 32.0
margin_right = 176.0
margin_bottom = 33.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer"]
margin_top = 190.0
margin_right = 185.0
margin_bottom = 215.0
text = "Distance formula"

[node name="DistanceFormula" type="OptionButton" parent="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer"]
margin_left = 197.0
margin_top = 184.0
margin_right = 1000.0
margin_bottom = 221.0
text = "Euclidian"
items = [ "Euclidian", null, false, 0, null, "Manhattan", null, false, 1, null, "Chebyshev", null, false, 2, null, "Column", null, false, 3, null, "Row", null, false, 4, null, "Diagonal", null, false, 5, null ]
selected = 0

[node name="AnimationsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 576.0

[node name="NoAnimationsWarning" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 24.0
margin_right = 576.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 48 )
rect_pivot_offset = Vector2( 288, 11 )
text = "Click here to add an animation"
transparent = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 576.0
margin_bottom = 96.0

[node name="ConfirmationDialog" parent="." instance=ExtResource( 10 )]
dialog_text = "Are you sure you want to delete all the animations for the Node?"

[connection signal="item_rect_changed" from="." to="." method="_on_AnimaAnimationData_item_rect_changed"]
[connection signal="mouse_entered" from="." to="." method="_on_AnimaAnimationData_mouse_entered"]
[connection signal="mouse_entered" from="Title" to="." method="_on_Title_mouse_entered"]
[connection signal="play_preview" from="Title/ActionsContainer/TitleActionsBg/HBoxContainer/Preview" to="." method="_on_Preview_play_preview"]
[connection signal="toggled" from="Title/ActionsContainer/TitleActionsBg/HBoxContainer/Time" to="." method="_on_Time_toggled"]
[connection signal="toggled" from="Title/ActionsContainer/TitleActionsBg/HBoxContainer/AnimateAs" to="." method="_on_AnimateAs_toggled"]
[connection signal="pressed" from="Title/ActionsContainer/TitleActionsBg/HBoxContainer/AddAnimation" to="." method="_on_AddAnimation_pressed"]
[connection signal="pressed" from="Title/ActionsContainer/TitleActionsBg/HBoxContainer/Remove" to="." method="_on_Remove_pressed"]
[connection signal="item_selected" from="Title/ActionsContainer/TitleActionsBg/HBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_updated" from="TimeContent/MarginContainer/TimeContentWrapper/TimeContentDetails/Duration" to="." method="_on_Duration_value_updated"]
[connection signal="value_updated" from="TimeContent/MarginContainer/TimeContentWrapper/TimeContentDetails/Delay" to="." method="_on_Delay_value_updated"]
[connection signal="pressed" from="TimeContent/MarginContainer/TimeContentWrapper/CloseTimeContent" to="." method="_on_Time_toggled" binds= [ false ]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NodeOrGroup/GridContainer/AsNode" to="." method="_maybe_show_group_data"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NodeOrGroup/GridContainer/AsGroup" to="." method="_maybe_show_group_data"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NodeOrGroup/GridContainer/AsGrid" to="." method="_maybe_show_group_data"]
[connection signal="changed" from="MarginContainer/VBoxContainer/NodeOrGroup/GroupData/MarginContainer/GridContainer/ItemsDelay" to="." method="_emit_updated"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/NodeOrGroup/GroupData/MarginContainer/GridContainer/AnimationGroupType" to="." method="_on_AnimationType_item_selected"]
[connection signal="changed" from="MarginContainer/VBoxContainer/NodeOrGroup/GroupData/MarginContainer/GridContainer/StartIndex" to="." method="_emit_updated"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer/Size/Button" to="." method="_on_Button_pressed"]
[connection signal="changed" from="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer/ItemsDelay" to="." method="_emit_updated"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer/AnimationGridType" to="." method="_on_AnimationGridType_item_selected"]
[connection signal="changed" from="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer/Vector2/X/pointX" to="." method="_emit_updated"]
[connection signal="changed" from="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer/Vector2/Y/pointY" to="." method="_emit_updated"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/NodeOrGroup/GridData/GridContainer/DistanceFormula" to="." method="_on_AnimationType_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NoAnimationsWarning" to="." method="_on_AddAnimation_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
